# course_work_3

./: main.py  pyproject.toml  utils.py
tests/: test_utils.py
