[tool.poetry]
name = "course-work(3)"
version = "0.1.0"
description = ""
authors = ["makarov_s <rvsn3113@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work(3)"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
